// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applydebuff tracks DOS Urn 1`] = `
[
  {
    "abilityID": 228626,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 647832,
  },
  {
    "abilityID": 228626,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 1286270,
  },
  {
    "abilityID": 228626,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 1286270,
  },
  {
    "abilityID": 228626,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 1286270,
  },
  {
    "abilityID": 228626,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 1286270,
  },
  {
    "abilityID": 228626,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 1286270,
  },
  {
    "abilityID": 228626,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 1286270,
  },
]
`;

exports[`applydebuff tracks MOTS maze failures 1`] = `
[
  {
    "abilityID": 323881,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 35495540,
  },
  {
    "abilityID": 323881,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 35495540,
  },
  {
    "abilityID": 323881,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 35495540,
  },
  {
    "abilityID": 323881,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 35495540,
  },
  {
    "abilityID": 323881,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 35495540,
  },
]
`;

exports[`applydebuff tracks SOA Spear 1`] = `
[
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 11913707,
  },
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 11913707,
  },
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 11913707,
  },
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 11913707,
  },
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 11913707,
  },
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 11913707,
  },
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 11913707,
  },
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 11913707,
  },
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 11913879,
  },
  {
    "abilityID": 339917,
    "eventType": "ApplyDebuff",
    "sourcePlayerID": null,
    "targetNPCID": null,
    "targetPlayerID": null,
    "timestamp": 12840160,
  },
]
`;
